--- a/Jiot3chHydro/about.html
+++ b/Jiot3chHydro/about.html
@@ -99,7 +99,7 @@
                 </li>
                 <!-- ========== FULL WIDTH MEGAMENU END ==================-->
                 <!-- ========== Contact dropdown ==================-->
-                <li class="nav-item "><a href="contact.php" >Contact <b class="caret"></b></a></li>
+                <li class="nav-item "><a href="contact.html" >Contact <b class="caret"></b></a></li>
                 <!-- ========== Contact dropdown end ==================-->
               </ul>
             </div>
@@ -390,7 +390,7 @@
                 <div >
               <h4 class="h6" style="color: white">Contact</h4>
               <p class="text-uppercase" style="color: white"><strong>BP 214. Bafoussam</strong><br>Tel: 699910001<br><strong>martinjiokeu@gmail.com</strong></p>
-              <br><br><br><a href="contact.php" class="btn btn-template-main">Aller à la page de contact</a>
+              <br><br><br><a href="contact.html" class="btn btn-template-main">Aller à la page de contact</a>
               <hr class="d-block d-lg-none">
             </div>
            
